fixed spacing issue between graph and synopsis

--- a/src/less/base.less
+++ b/src/less/base.less
@@ -56,5 +56,5 @@ h4.breakdown {
     margin-bottom: 4px;
 }
 .canvasWrapper {
-    height: 800px;
+    margin-bottom: 60px;
 }
